# rf-log

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: main.rs
app/ui/: .npmrc  index.html  package-lock.json  package.json  vite.config.js
app/ui/src/: App.jsx  ipc.js  styles.css
crates/_archive/rf-db/: Cargo.toml
crates/_archive/rf-db/src/: event_store.rs  lib.rs  migrations.rs
crates/_archive/rf-dsp-v1/: Cargo.toml
crates/_archive/rf-dsp-v1/src/: averaging.rs  cqpsk.rs  detection.rs  fft.rs  fingerprint.rs  lib.rs  monitor.rs  p25_baseband.rs  pipeline.rs  rds.rs
crates/_archive/rf-events/: Cargo.toml
crates/_archive/rf-events/src/: alert.rs  custom.rs  event.rs  lib.rs  pipeline.rs  query.rs  session.rs
crates/_archive/rf-log-egui/: Cargo.toml
crates/_archive/rf-log-egui/src/: alert_engine.rs  app.rs  bridge.rs  commands.rs  config_poller.rs  dsp_bridge.rs  event_ingestion.rs  event_manager.rs  lifecycle_monitor.rs  main.rs  pool.rs  sigex_bridge.rs  state.rs  theme.rs
crates/_archive/rf-log-egui/src/panels/: mod.rs
crates/_archive/rf-log-egui/src/views/: collect.rs  exploit.rs  mod.rs  plan.rs  watchdog.rs
crates/_archive/rf-log-egui/src/widgets/: band_tabs.rs  freq_digits.rs  mod.rs  monitor_dock.rs  nav_rail.rs  signal_log.rs  spectrum.rs  status_hud.rs  tab_bar.rs  waterfall.rs
crates/_archive/rf-recorder/: Cargo.toml
crates/_archive/rf-recorder/src/: lib.rs
crates/_archive/rf-same/: Cargo.toml
crates/_archive/rf-same/src/: afsk.rs  codes.rs  fips.rs  lib.rs  parser.rs
crates/_archive/rf-scan/: Cargo.toml
crates/_archive/rf-scan/src/: bands.rs  controller.rs  freq_db.rs  lib.rs
crates/_archive/rf-sdr-v1/: Cargo.toml
crates/_archive/rf-sdr-v1/src/: lib.rs  reader.rs  ring_buffer.rs  simulated.rs  soapy.rs
crates/_archive/rf-sentinel/: Cargo.toml
crates/_archive/rf-sentinel/src/: bridge.rs  main.rs
crates/_archive/rf-sentinel/src/api/: anomalies.rs  baselines.rs  config.rs  drones.rs  emitters.rs  harmonics.rs  mod.rs  pdw.rs  reports.rs  surveys.rs
crates/_archive/rf-sentinel/src/db/: m001_initial.sql  migrations.rs  mod.rs
crates/_archive/rf-sentinel/src/ws/: events.rs  mod.rs  spectrum.rs
crates/_archive/rf-sigex/: Cargo.toml
crates/_archive/rf-sigex/src/: encryption.rs  lib.rs  network.rs  protocol.rs  traffic.rs
crates/_archive/rf-web/: Cargo.toml
crates/_archive/rf-web/src/: lib.rs  state.rs
crates/rf-bus/: Cargo.toml
crates/rf-bus/src/: lib.rs
crates/rf-catalog/: Cargo.toml
crates/rf-catalog/src/: lib.rs
crates/rf-dsp/: Cargo.toml
crates/rf-dsp/src/: cfar.rs  fft.rs  lib.rs  occupancy.rs
crates/rf-elint/: Cargo.toml
crates/rf-elint/src/: lib.rs  pdw.rs  pri_analysis.rs  pulse_detect.rs  reference.rs
crates/rf-liquid/: Cargo.toml
crates/rf-liquid-sys/: Cargo.toml  build.rs
crates/rf-liquid-sys/src/: lib.rs
crates/rf-liquid/src/: ampmodem.rs  filter.rs  freqdem.rs  lib.rs  nco.rs  real_filter.rs  real_resampler.rs  resampler.rs
crates/rf-masint/: Cargo.toml
crates/rf-masint/src/: baseline.rs  change_detect.rs  drone.rs  fingerprint.rs  harmonics.rs  lib.rs
crates/rf-mission/: Cargo.toml
crates/rf-mission/src/: lib.rs
crates/rf-p25/: Cargo.toml
crates/rf-p25/src/: lib.rs
crates/rf-sensor/: Cargo.toml
crates/rf-sensor/src/: error.rs  lib.rs  manager.rs  pool.rs  ring.rs  sim.rs  soapy.rs
crates/rf-types/: Cargo.toml
crates/rf-types/src/: lib.rs
sentinel-ui/: index.html  package-lock.json  package.json  vite.config.js
sentinel-ui/src/: App.jsx  main.jsx
sentinel-ui/src/api/: client.js
sentinel-ui/src/canvas/: SpectrumCanvas.jsx
sentinel-ui/src/components/: Footer.jsx  Header.jsx  Placeholder.jsx  TabBar.jsx
sentinel-ui/src/missions/: Dashboard.jsx  Drone.jsx  Hunt.jsx  Report.jsx  Survey.jsx  Tscm.jsx
sentinel-ui/src/stores/: useAppStore.js  useEventStore.js  useSpectrumStore.js
sentinel-ui/src/theme/: global.css  index.js
