[package]
name = "rf-catalog"
description = "RF-LOG v2 catalog: SQLite persistence for missions, sensors, and detections; SigMF IQ-store paths."
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rf-types = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
