[package]
name = "rf-dsp"
description = "RF-LOG v2 survey DSP core: windowed PSD, Welch averaging, CA-CFAR detection, occupancy stitching."
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rf-types = { workspace = true }
num-complex = { workspace = true }
rustfft = { workspace = true }
