[package]
name = "rf-masint"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
num-complex = { workspace = true }
rusqlite = { workspace = true }

rf-elint = { path = "../rf-elint" }
